# LivestreamRustExtension

./: .gitignore  Makefile  README.md  export_games.sh
godot/: ExtensionRoot.tscn  export_presets.cfg  extension_root.gd  extension_root.gd.uid  game_page.gd  game_page.tscn  icon.svg.import  main.tscn  multiplayer.tscn  multiplayer_scene.gd  profile_page.gd  profile_page.tscn  project.godot  root.gd  root.gd.uid  root.tscn  rust.gdextension  rust.gdextension.uid  start_scene.gd  start_scene.tscn  version.txt  web-oauth-shell.html  web-shell.html
godot/blender/: accessories.blend.import  gumbot.blend.import
godot/fonts/: HomeVideo-BLG6G.ttf.import  HomeVideoBold-R90Dv.ttf.import
godot/games/: animation_state.gd  animation_state.gd.uid  animation_synchronizer.gd  animation_synchronizer.gd.uid  base_game_state.gd  base_game_state.gd.uid  debug_camera.gd  debug_camera.gd.uid  debug_camera.tscn  game_base.gd  game_base.gd.uid  game_container.gd  game_container.gd.uid  session_synchronizer.gd  session_synchronizer.gd.uid
godot/gumbot/: emote_billboard.gd  emote_billboard.gd.uid  emote_billboard.tscn  gumbot.gd  gumbot.gd.uid  gumbot.tscn  gumbot_standard_anim_tree.tres  gumbot_state_tree.tres
godot/icons/: 0.png.import  1.png.import  2.png.import  3.png.import  4.png.import  5.png.import  6.png.import  7.png.import  8.png.import  (+85 more)
krita/: gumbot_scrolling_banner.kra
rust/: Cargo.toml  bacon.toml
rust/.cargo/: Config.toml
rust/src/: chatter.rs  lib.rs  mail.rs  multiplayer_session.rs  network.rs  player.rs  shop.rs
web/: package-lock.json  package.json
(+377 files in other folders)
