[package]
name = "livestream-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["api-custom", "experimental-wasm", "lazy-function-tables"]